# biu-fitness-training-ex03

./: .coverage  .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_A2C.md  PRD_LSTM.md  PRD_REINFORCE.md  REVIEW.md  TODO.md  episode_analysis.py  generate_report.py  run_experiments.py  sensitivity_analysis.py
notebooks/: create_notebook.py  ex03_fitness_rl.ipynb
results/: sensitivity.pkl  training_results.pkl
src/fitness_rl/: __init__.py  constants.py
src/fitness_rl/sdk/: __init__.py  sdk.py
src/fitness_rl/services/: __init__.py  a2c_trainer.py  data_clusters.py  data_features.py  data_normalizer.py  data_preprocessor.py  data_service.py  data_windows.py  lstm_model.py  lstm_trainer.py  plotter.py  policy_network.py  reinforce_trainer.py  reward.py  rl_env.py
src/fitness_rl/shared/: __init__.py  config.py  gatekeeper.py  seeding.py  version.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/test_data_service/: __init__.py  test_clusters.py  test_download.py  test_features.py  test_normalizer.py  test_preprocessor.py  test_windows.py
tests/unit/test_lstm/: __init__.py  test_lstm_model.py  test_lstm_trainer.py
tests/unit/test_rl/: __init__.py  test_a2c_trainer.py  test_policy_network.py  test_reinforce_trainer.py  test_trainer_init.py
tests/unit/test_rl_env/: __init__.py  test_muscle_dynamics.py  test_rl_env.py
tests/unit/test_sdk/: test_sdk.py
tests/unit/test_services/: test_plotter.py
tests/unit/test_shared/: __init__.py  test_config.py  test_gatekeeper.py  test_seeding.py  test_version.py
