[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitness-rl"
version = "1.00"
description = "BIU DRL Ex03 — LSTM + REINFORCE + A2C for personal fitness planning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "kaggle>=1.6.0",
    "python-dotenv>=1.0.0",
    "nbformat>=5.10.4",
    "reportlab>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fitness_rl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/fitness_rl --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "src/**/gui/*"]

[tool.coverage.report]
fail_under = 85

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "pre-commit>=3.7.0",
]
